# mindtreelog

./: .gitignore  .pre-commit-config.yaml  README.md  TROUBLESHOOTING.md  env.example  justfile  manage.py  pyproject.toml  ruff.toml
.pre-commit-hooks/: check-python-version.py  check-uv-lock.sh
app/: settings.py  urls.py
collectibles/: admin.py  models.py  urls.py  views.py
collectibles/migrations/: 0002_twitterpost.py  0003_arxivpaper_githubrepo.py  0004_link.py
collectibles/static/collectibles/css/: arxiv.css  base.css  github.css  links.css  twitter.css  youtube.css
collectibles/static/collectibles/js/: base.js  twitter.js
collectibles/templates/collectibles/: collections_list.html  video_list.html
youtube/: admin.py  models.py  urls.py  views.py
youtube/migrations/: 0001_initial.py  0002_twitterpost.py
youtube/templates/youtube/: twitter_list.html  video_list.html
