[project]
name = "mindtreelog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pre-commit>=4.0.1",
    "ruff>=0.14.2",
]
